As with OpenBSD, there is no HZ defined in FreeBSD

https://bugzilla.gnome.org/show_bug.cgi?id=674064